<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="com.example.calibracion.dosificacion">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_46sdp"
        android:layout_height="@dimen/_46sdp"
        app:layout_constraintBottom_toTopOf="@+id/textVolAplicado"
        app:layout_constraintEnd_toStartOf="@+id/textMetodo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/icon_dosi"
        android:contentDescription="@string/herbicidas_logo" />

    <TextView
        android:id="@+id/textMetodo"
        android:layout_width="@dimen/_186sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/dosificacion"
        android:textColor="@color/black"
        android:textSize="@dimen/_36sdp"
        android:textStyle="bold|italic"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVolAplicado"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/volumen_de_aplicacion"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textDosisPc"
        app:layout_constraintEnd_toStartOf="@+id/inputVolAplicado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMetodo" />

    <TextView
        android:id="@+id/textDosisPc"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/dosis_de_pc"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textResultadoLitro"
        app:layout_constraintEnd_toStartOf="@+id/inputDosisPc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVolAplicado" />

    <TextView
        android:id="@+id/textResultadoLitro"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/resultado_pc_litro"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textAreaAplicar"
        app:layout_constraintEnd_toStartOf="@+id/imageResultShape1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDosisPc" />

    <EditText
        android:id="@+id/inputVolAplicado"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_56sdp"
        android:layout_marginEnd="@dimen/_34sdp"
        android:digits="0123456789."
        android:fontFamily="@font/glacial"
        android:hint="@string/volumen"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="#B7373636"
        android:gravity="center"
        android:background="@drawable/edit_text_rounded"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/inputDosisPc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textVolAplicado"
        app:layout_constraintTop_toBottomOf="@+id/textMetodo"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputDosisPc"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_34sdp"
        android:digits="0123456789."
        android:fontFamily="@font/glacial"
        android:hint="@string/dosis"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="#B7373636"
        android:gravity="center"
        android:background="@drawable/edit_text_rounded"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/imageResultShape1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDosisPc"
        app:layout_constraintTop_toBottomOf="@+id/inputVolAplicado"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageResultShape1"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:contentDescription="Result shape image"
        app:layout_constraintBottom_toTopOf="@+id/inputAreaAplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textResultadoLitro"
        app:layout_constraintTop_toBottomOf="@+id/inputDosisPc"
        app:srcCompat="@drawable/result_shape" />

    <TextView
        android:id="@+id/textResultado1"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_28sdp"
        android:fontFamily="@font/glacial"
        android:gravity="center"
        android:text="@string/resultado"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageResultShape1"
        app:layout_constraintEnd_toEndOf="@+id/imageResultShape1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageResultShape1"
        app:layout_constraintTop_toTopOf="@+id/imageResultShape1"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textAreaAplicar"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/area_por_aplicar"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textResultadoAgua"
        app:layout_constraintEnd_toStartOf="@+id/inputAreaAplicar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultadoLitro" />

    <TextView
        android:id="@+id/textResultadoAgua"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/resultado_agua"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textResultadoArea"
        app:layout_constraintEnd_toStartOf="@+id/imageResultShape2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAreaAplicar" />

    <TextView
        android:id="@+id/textResultadoArea"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/glacial"
        android:gravity="center"
        android:text="@string/resultado_pc_area"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textPC"
        app:layout_constraintEnd_toStartOf="@+id/imageResultShape3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultadoAgua" />

    <EditText
        android:id="@+id/inputAreaAplicar"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:digits="0123456789."
        android:fontFamily="@font/glacial"
        android:hint="@string/area"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="#B7373636"
        android:gravity="center"
        android:background="@drawable/edit_text_rounded"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/imageResultShape2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textAreaAplicar"
        app:layout_constraintTop_toBottomOf="@+id/imageResultShape1"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageResultShape2"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:contentDescription="Result shape image"
        app:layout_constraintBottom_toTopOf="@+id/imageResultShape3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textResultadoAgua"
        app:layout_constraintTop_toBottomOf="@+id/inputAreaAplicar"
        app:srcCompat="@drawable/result_shape" />

    <TextView
        android:id="@+id/textResultado2"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_28sdp"
        android:fontFamily="@font/glacial"
        android:gravity="center"
        android:text="@string/resultado"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageResultShape2"
        app:layout_constraintEnd_toEndOf="@+id/imageResultShape2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageResultShape2"
        app:layout_constraintTop_toTopOf="@+id/imageResultShape2"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageResultShape3"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:contentDescription="Result shape image"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textResultadoArea"
        app:layout_constraintTop_toBottomOf="@+id/imageResultShape2"
        app:srcCompat="@drawable/result_shape" />

    <TextView
        android:id="@+id/textResultado3"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_28sdp"
        android:fontFamily="@font/glacial"
        android:gravity="center"
        android:text="@string/resultado"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageResultShape3"
        app:layout_constraintEnd_toEndOf="@+id/imageResultShape3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageResultShape3"
        app:layout_constraintTop_toTopOf="@+id/imageResultShape3"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textPC"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_70sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/acronimos"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalcular"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultadoArea"/>

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginStart="@dimen/_210sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_95sdp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/glacial"
        android:text="@string/calcular"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="#7C9A63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageResultShape3" />

    <ImageView
        android:id="@+id/imageHerbIcon"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageDivider1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPC"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/icon_herb"
        android:contentDescription="@string/herbicidas_logo" />

    <ImageView
        android:id="@+id/imageFungIcon"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageDivider2"
        app:layout_constraintStart_toEndOf="@id/imageDivider1"
        app:layout_constraintTop_toBottomOf="@+id/textPC"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/icon_fung2"
        android:contentDescription="@string/fungicidas_e_insecticidas_logo" />

    <ImageView
        android:id="@+id/imageDosIcon"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@id/imageDivider2"
        app:layout_constraintTop_toBottomOf="@+id/textPC"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/icon_dosi"
        android:contentDescription="@string/dosificacion_logo" />

    <ImageView
        android:id="@+id/imageDivider1"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_38sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageFungIcon"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/imageHerbIcon"
        app:layout_constraintTop_toBottomOf="@+id/textPC"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/icon_divider"
        android:contentDescription="Divider of icon panel"/>

    <ImageView
        android:id="@+id/imageDivider2"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_38sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageDosIcon"
        app:layout_constraintStart_toEndOf="@+id/imageFungIcon"
        app:layout_constraintTop_toBottomOf="@+id/textPC"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/icon_divider"
        android:contentDescription="Divider of icon panel" />
</androidx.constraintlayout.widget.ConstraintLayout>
