<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F4F4F4"
    tools:context="ucr.eefbm.calibracion.menu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="500dp"
        android:layout_height="980dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@drawable/menu_bg" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/politic"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_210sdp"
        app:backgroundTint="@color/white"
        app:strokeColor="#7C9A60"
        app:strokeWidth="4dp"
        android:fontFamily="@font/glacial"
        android:text="@string/politics"
        android:gravity="center"
        android:textColor="#7C9A60"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ayuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ayuda"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_90sdp"
        app:backgroundTint="@color/white"
        app:strokeColor="#7C9A60"
        app:strokeWidth="4dp"
        android:fontFamily="@font/glacial"
        android:text="@string/ayuda"
        android:gravity="center"
        android:textColor="#7C9A60"
        android:textSize="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_200sdp"
        app:layout_constraintTop_toBottomOf="@+id/politic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buttonAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/glacial"
        android:text="@string/atras"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--Copyright 2023-2024 Sebastian Venegas Brenes https://github.com/Vnegas/Mobile-Apps -->