<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="com.example.calibracion.fungicidas">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_194sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/fungicidas_insecticidas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_38sdp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="14dp"
        android:fontFamily="@font/glacial"
        android:text="@string/seleccionar_metodo"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonArea"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/glacial"
        android:text="Por área"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#7C9A63"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlanta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/buttonPlanta"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_170sdp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#7C9A63"
        android:fontFamily="@font/glacial"
        android:text="Por planta"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonArea" />

    <TextView
        android:id="@+id/buttonAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_200sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/atras"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlanta"
        app:layout_constraintVertical_bias="0.802" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_46sdp"
        android:layout_height="@dimen/_46sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/icon_fung2"
        android:contentDescription="@string/fungicidas_e_insecticidas_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--Copyright 2023-2024 Sebastian Venegas Brenes https://github.com/Vnegas/Mobile-Apps -->