<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="com.example.calibracion.herbicidas">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/_168sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/noto_serif"
        android:gravity="center"
        android:text="@string/herbicidas"
        android:textColor="@color/black"
        android:textSize="@dimen/_38sdp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:padding="14dp"
        android:fontFamily="@font/glacial"
        android:text="@string/seleccionar_metodo"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonVolFijo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonVolFijo"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#7C9A63"
        android:fontFamily="@font/glacial"
        android:text="Volumen fijo"
        android:textColor="@color/black"
        android:textSize="@dimen/_21sdp"
        app:layout_constraintBottom_toTopOf="@+id/buttonVel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonVel"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#7C9A63"
        android:fontFamily="@font/glacial"
        android:text="Velocidad fija"
        android:textColor="@color/black"
        android:textSize="@dimen/_21sdp"
        app:layout_constraintBottom_toTopOf="@+id/buttonVolApl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVolFijo" />

    <Button
        android:id="@+id/buttonVolApl"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_56sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_130sdp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#7C9A63"
        android:fontFamily="@font/glacial"
        android:text="Volumen aplicado"
        android:textColor="@color/black"
        android:textSize="@dimen/_21sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVel" />

    <TextView
        android:id="@+id/buttonAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_72sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:fontFamily="@font/glacial"
        android:text="@string/atras"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVolApl"
        app:layout_constraintVertical_bias="0.677" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_46sdp"
        android:layout_height="@dimen/_46sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        app:srcCompat="@drawable/icon_herb"
        android:contentDescription="@string/herbicidas_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--Copyright 2023-2024 Sebastian Venegas Brenes https://github.com/Vnegas/Mobile-Apps -->